Bug 732120 - Remove ReorderBlocks. r=sstangl